--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="mx-10">
     <!-- This is Navigation Bar Section -->
-    <nav>
-        <h1>This is nav</h1>
+    <nav class="flex items-center justify-center">
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <div class="">
+               <img class="h-1/2" src="./Logo.png" alt="">
+              </div>
+            </div>
+            <div class="navbar-center">
+                <button class="btn btn-xs px-3 h-1/2 sm:btn-sm md:btn-md lg:btn-lg">Sort by view</button>
+            </div>
+            <div class="navbar-end">
+                <button class="btn btn-active bg-red-700 text-white">Blog</button>
+            </div>
+          </div>
     </nav>
+    <hr>
+
+    
+    <main>
+
+    </main>
     
 
     <script src="./js/ptube.js"></script>
