all done except active button

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="navbar bg-base-100">
             <div class="navbar-start">
               <div class="">
-               <img class="h-1/2" src="./Logo.png" alt="">
+               <img class="h-1/2 w-36" src="./Logo.png" alt="">
               </div>
             </div>
             <div class="navbar-center">
-                <button onclick="handleCatagoryItem(1000, true)" class="btn btn-xs px-3 h-1/2 sm:btn-sm md:btn-md lg:btn-lg">Sort by view</button>
+                <button onclick="handleCatagoryItem(1000, true)" class="border px-3 py-2 rounded-md bg-slate-100">Sort by view</button>
             </div>
             <div class="navbar-end">
-                <button class="btn btn-active bg-darkRed text-white">Blog</button>
+                <button onclick="blogPage()" class="border px-3 py-2 rounded-md bg-darkRed text-white">Blog</button>
             </div>
           </div>
     </nav>
