--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="navbar-center">
-                <button onclick="handleCatagoryItem(1000, true)" class="border px-3 py-2 rounded-md bg-slate-100">Sort by view</button>
+                <button onclick="sortByView()" class="border px-3 py-2 rounded-md bg-slate-100">Sort by view</button>
             </div>
             <div class="navbar-end">
                 <button onclick="blogPage()" class="border px-3 py-2 rounded-md bg-darkRed text-white">Blog</button>
